added js file to handle user form validations and for future user authentification

--- a/Pages/account_page.html
+++ b/Pages/account_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Create an Account - Le Luxe</title>
+    <title>My Account - Le Luxe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
@@ -82,7 +82,7 @@
             <label for="">Password*</label>
             <input type="text" class="input-field" id="password">
             <button class="form-button" id="submit">Log in</button>
-            <p>New member? <span class="hyperlink"><a href="#">create an account</a></span></p>
+            <p>New member? <span class="hyperlink"><a href="/Pages/register.html">create an account</a></span></p>
           </form>
         </div>
       </div>
