update register.html - added validation to check for user inputs when creating an account

--- a/Pages/register.html
+++ b/Pages/register.html
@@ -81,11 +81,11 @@
               <label for="">Full name*</label>
               <input type="text" class="input-field" id="fullname">
               <label for="">Email address*</label>
-              <input type="text" class="input-field" id="username">
+              <input type="text" class="input-field" id="email">
               <label for="">Password*</label>
               <input type="text" class="input-field" id="password">
               <p>A link to set a new password will be sent to your email address.<p>
-              <button class="form-button" id="submit">Register</button>
+              <button class="form-button" id="register">Register</button>
               <p>Existing member? <span class="hyperlink"><a href="/Pages/account_page.html">login</a></span></p>
             </form>
           </div>
@@ -164,15 +164,6 @@
 
 
 
-      <script src="/JS/navbar-ham-icon.js"></script>
-
-
-
-
-
-
-
-
-
-
+    <script src="/JS/navbar-ham-icon.js"></script>
+    <script src="/JS/create-account.js"></script>
 </body>
