created user dashboard html and css files

--- a/Pages/register.html
+++ b/Pages/register.html
@@ -83,7 +83,7 @@
               <label for="">Email address*</label>
               <input type="text" class="input-field" id="email">
               <label for="">Password*</label>
-              <input type="text" class="input-field" id="password">
+              <input type="password" class="input-field" id="password">
               <p>A link to set a new password will be sent to your email address.<p>
               <button class="form-button" id="register">Register</button>
               <p>Existing member? <span class="hyperlink"><a href="/Pages/account_page.html">login</a></span></p>
