--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>My AccountLe Luxe</title>
+    <title>My Account - Le Luxe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
@@ -68,16 +68,54 @@
     </div>
   
     <main>
-
         <div class="container">
             <div class="title">
               <h1>My account</h1>
               <hr>
             </div>
+            <div class="dashbaord-area">
+                <div class='content'>
+                    <aside id='sidebar'>
+                        <div class="user">
+                            <i class="fa fa-user-circle"></i>
+                        </div>
+                        <div class="profile">
+                            <h3>Profile</h3>
+                        </div>
+                        <div class="orders">
+                            <h3>Orders</h3>
+                        </div>
+                        <div class="billing">
+                            <h3>Billing</h3>
+                        </div>
+                        <div class="logout">
+                            <h3>Log out</h3>
+                        </div>
+                    </aside>
+                    <div class="content-grid">
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                        <div class="grid-item">
+                            <h3>Lorem Ipsum</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>              
     </main>
-  
-  
   
   
     <footer>
@@ -146,5 +184,5 @@
     </footer>  
   
     <script src="/JS/navbar-ham-icon.js"></script>
-    <script src="/JS/create-account.js"></script>
+    <script src="/JS/dashboard.js"></script>
 </body>
