update dashboard.html - added icons to each sidebar tab, repalced placeholder text in tabs

--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -76,40 +76,49 @@
             <div class="dashbaord-area">
                 <div class='content'>
                     <aside id='sidebar'>
+                        <hr class="separator">
                         <div class="user">
-                            <i class="fa fa-user-circle"></i>
+                            <p>Hello, <span id="username"></span></p>
                         </div>
-                        <div class="profile">
-                            <h3>Profile</h3>
+                         <hr class="separator">
+                        <div class="tab" data-target="account-tab">
+                            <h3><i class="fa fa-address-card-o"></i>  Account</h3>
                         </div>
-                        <div class="orders">
+                        <hr class="separator">
+                        <div class="tab" data-target="orders-tab">
                             <h3>Orders</h3>
                         </div>
-                        <div class="billing">
-                            <h3>Billing</h3>
+                        <hr class="separator">
+                        <div class="tab" data-target="profile-tab">
+                            <h3><i class="fa fa-user-o"></i>  Profile</h3>
                         </div>
-                        <div class="logout">
-                            <h3>Log out</h3>
+                        <hr class="separator">
+                        <div class="tab" data-target="billing-tab">
+                            <h3><i class="fa fa-envelope-o"></i>  Billing</h3>
+                        </div>
+                        <hr class="separator">
+                        <div class="tab" data-target="logout">
+                            <h3><i class="fa fa-sign-out"></i>  Log out</h3>
                         </div>
                     </aside>
-                    <div class="content-grid">
+                    <div class="content-grid" id="content-grid">
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                         <div class="grid-item">
-                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem Ipsum</h4>
                         </div>
                     </div>
                 </div>
