update dashboard pages - commented out the orders tab, added an active tab class to show the highlighted tab, added icons to account tab cards

--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -81,13 +81,13 @@
                             <p>Hello, <span id="username"></span></p>
                         </div>
                          <hr class="separator">
-                        <div class="tab" data-target="account-tab">
+                        <div class="tab" id="active-tab" data-target="account-tab">
                             <h3><i class="fa fa-address-card-o"></i>  Account</h3>
                         </div>
-                        <hr class="separator">
+                        <!-- <hr class="separator">
                         <div class="tab" data-target="orders-tab">
                             <h3>Orders</h3>
-                        </div>
+                        </div> -->
                         <hr class="separator">
                         <div class="tab" data-target="profile-tab">
                             <h3><i class="fa fa-user-o"></i>  Profile</h3>
@@ -103,22 +103,18 @@
                     </aside>
                     <div class="content-grid" id="content-grid">
                         <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
+                            <h3>Orders</h3>
+                            <p>View and manage your previous orders.</p>
                         </div>
                         <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
+                            <i class="fa fa-user-o"></i>
+                            <h3>Profile</h3>
+                            <p>View and edit your profile information.</p>
                         </div>
                         <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
-                        </div>
-                        <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
-                        </div>
-                        <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
-                        </div>
-                        <div class="grid-item">
-                            <h4>Lorem Ipsum</h4>
+                            <i class="fa fa-envelope-o"></i>
+                            <h3>Billing</h3>
+                            <p>Manage and update your billing information.</p>
                         </div>
                     </div>
                 </div>
