--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -97,7 +97,7 @@
                             <h3><i class="fa fa-envelope-o"></i>  Billing</h3>
                         </div>
                         <hr class="separator">
-                        <div class="tab" data-target="logout">
+                        <div class="tab" data-target="logout" id="logout">
                             <h3><i class="fa fa-sign-out"></i>  Log out</h3>
                         </div>
                     </aside>
