update accountpages - added login authentication to the page through js

--- a/Pages/account_page.html
+++ b/Pages/account_page.html
@@ -80,7 +80,7 @@
             <label for="">Username or email address*</label>
             <input type="text" class="input-field" id="username">
             <label for="">Password*</label>
-            <input type="text" class="input-field" id="password">
+            <input type="password" class="input-field" id="password">
             <button class="form-button" id="submit">Log in</button>
             <p>New member? <span class="hyperlink"><a href="/Pages/register.html">create an account</a></span></p>
           </form>
@@ -161,7 +161,7 @@
 
       <script src="/JS/navbar-ham-icon.js"></script>
 
-
+      <script src="/JS/login.js"></script>
 
 
 
