minor styling changes

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -16,7 +16,7 @@
     <span class="navbar-toggle-icon" id="js-navbar-toggle-icon">
       <i class="fa fa-bars"></i>
     </span>
-    <a href="index.html" class="logo">Le Luxe</a>
+    <a href="/index.html" class="logo">Le Luxe</a>
     <ul class="main-nav" id="js-menu">
       <li>
         <a href="/index.html" class="nav-links">Home</a>
